-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.8.0 Alpha
-
None
On platforms where the compatibility profile is available (so OS X does not count here), apps can request a >= 3.2 OpenGL version with QSurfaceFormat::CompatibilityProfile.
Normally we assume this needs no specific handling because all functions and core-deprecated behavior are available, and GLSL 1.00/1.10 shaders compile normally.
Sadly, that is not true for Intel drivers. These reject shader sources without a version directive in 4.x compatibility profiles.
The weird thing is that adding a #version 110 (which is (should be) the default as per spec for OpenGL proper when no version directive is present) makes the error disappear.
Tested on a Surface Pro 3 with latest MS-endorsed Intel drivers.
NVIDIA has no such issues.
Low priority due to a somewhat special case, but there can be valid reasons for choosing a 4.x compat profile over 2.x, and so the expectation for Qt and Quick is to function in such contexts as well.